--- a/Tic-Tac-Toe_4.ipynb
+++ b/Tic-Tac-Toe_4.ipynb
@@ -793,7 +793,7 @@
     "    play_again = True if input(\"Play again? (y/n) > \").lower() == \"y\" else False\r\n",
     "    game_number += 1\r\n",
     "\r\n",
-    "__main__()"
+    "main()"
    ],
    "outputs": [],
    "metadata": {
