--- a/Tic-Tac-Toe_4.ipynb
+++ b/Tic-Tac-Toe_4.ipynb
@@ -643,7 +643,7 @@
     "       OpponentMarkerNumber = q[0].count(self.opponent)\r\n",
     "       EmptyCaseNumber = q[0].count(\"_\")\r\n",
     "       \r\n",
-    "       if Player in q[0] is True and non_player in q[0] is True:\r\n",
+    "       if Player in q[0] is True:\r\n",
     "           score+=0\r\n",
     "       if EmptyCaseNumber == 4:\r\n",
     "           score+=0\r\n",
