--- a/Tic-Tac-Toe_4.ipynb
+++ b/Tic-Tac-Toe_4.ipynb
@@ -162,7 +162,7 @@
     "    Sets the coordinates of a new grid that will be used by the minimax algorithm.\r\n",
     "    The objective is to reduce the tree search by width.\r\n",
     "    In fact, we made the hypothesis that a player has no interest to place a marker\r\n",
-    "    at more than 3/4 cases from the cases already placed.\r\n",
+    "    at more than 3 cases from the cases already placed.\r\n",
     "\r\n",
     "    Parameters\r\n",
     "    ----------\r\n",
@@ -172,13 +172,13 @@
     "    Returns\r\n",
     "    -------\r\n",
     "    min_column : int\r\n",
-    "        représente le minimum de la colonne de tous les jetons \r\n",
+    "        lower right column number of the new grid \r\n",
     "    min_raw : int \r\n",
-    "        représente le minimum de la ligne de tous les jetons\r\n",
+    "        lower right raw number of the new gr\r\n",
     "    max_column : int \r\n",
-    "        représente le maximum de la colonne de tous les jetons\r\n",
+    "        upper left column number of the new grid \r\n",
     "    max_raw : int \r\n",
-    "        represent the max number  le maximum de la ligne de tous les jetons\r\n",
+    "        upper left raw number of the new gr\r\n",
     "    \"\"\"\r\n",
     "    min_column=100\r\n",
     "    min_raw=100\r\n",
