--- a/Tic-Tac-Toe_4.ipynb
+++ b/Tic-Tac-Toe_4.ipynb
@@ -167,18 +167,17 @@
     "    Parameters\r\n",
     "    ----------\r\n",
     "    case_number : int\r\n",
-    "        Length of  of additional cells to be added around  to narrow the basic grid\r\n",
-    "\r\n",
+    "        Size of the grid surrounding the markers already played on the board\r\n",
     "    Returns\r\n",
     "    -------\r\n",
     "    min_column : int\r\n",
     "        lower right column number of the new grid \r\n",
     "    min_raw : int \r\n",
-    "        lower right raw number of the new gr\r\n",
+    "        lower right raw number of the new grid\r\n",
     "    max_column : int \r\n",
     "        upper left column number of the new grid \r\n",
     "    max_raw : int \r\n",
-    "        upper left raw number of the new gr\r\n",
+    "        upper left raw number of the new grid\r\n",
     "    \"\"\"\r\n",
     "    min_column=100\r\n",
     "    min_raw=100\r\n",
