--- a/Tic-Tac-Toe_4.ipynb
+++ b/Tic-Tac-Toe_4.ipynb
@@ -3,27 +3,27 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Tic-Tac-Toe 4 (12x12 grid)\n",
-    "1. Game rule  \n",
-    "    Tic-Tac-Toe 4 is a combinatorial variation on the classic Tic-tac-toe game. It is a turn-based game for two players.   \n",
-    "    Each player is represented with a markers: X for the first one and O for the second one.  \n",
-    "      \n",
-    "    The goal of the game is to align a sequence of 4 pieces on a grid with 12 columns and 12 rows.  \n",
-    "      \n",
-    "    The winner is the player who first aligns (horizontally, vertically or diagonally) at least four of his pieces in a row. When all the squares of the game grid are filled, if neither player has made such an alignment, the game is declared a draw.   \n",
-    "       \n",
-    "2. Model constraints\n",
-    "    - The model should be based on a Minimax algorithm with ideally an Alpha-Beta pruning\n",
-    "    - It is forbidden to use dictionaries of moves. All decisions must be calculated in real time\n",
-    "\n",
-    "3. Search space definition \n",
-    "    We started by determining our search space to have an idea of the number of operations to perform:\n",
-    "    - There is 144 cases in the grid  \n",
-    "    - At the nth round, there is $(244-(n-1))!$ possibilities\n",
-    "4. Our model implementation\n",
-    "    The main challenge here is not the game complexity but the extremely large search space. In order to decrease the number of nodes that are evaluated by our model we use these variants:\n",
-    "    - We implement alpha-beta pruning\n",
-    "    - \n",
+    "# Tic-Tac-Toe 4 (12x12 grid)\r\n",
+    "1. Game rule  \r\n",
+    "    Tic-Tac-Toe 4 is a combinatorial variation on the classic Tic-tac-toe game. It is a turn-based game for two players.   \r\n",
+    "    Each player is represented with a markers: X for the first one and O for the second one.  \r\n",
+    "      \r\n",
+    "    The goal of the game is to align a sequence of 4 pieces on a grid with 12 columns and 12 rows.  \r\n",
+    "      \r\n",
+    "    The winner is the player who first aligns (horizontally, vertically or diagonally) at least four of his pieces in a row. When all the squares of the game grid are filled, if neither player has made such an alignment, the game is declared a draw.   \r\n",
+    "       \r\n",
+    "2. Model constraints\r\n",
+    "    - The model should be based on a Minimax algorithm with ideally an Alpha-Beta pruning\r\n",
+    "    - It is forbidden to use dictionaries of moves. All decisions must be calculated in real time\r\n",
+    "\r\n",
+    "3. Search space definition \r\n",
+    "    We started by determining our search space to have an idea of the number of operations to perform:\r\n",
+    "    - There is 144 cases in the grid  \r\n",
+    "    - At the nth round, there is $(244-(n-1))!$ possibilities\r\n",
+    "4. Our model implementation\r\n",
+    "    The main challenge here is not the game complexity but the extremely large search space. In order to decrease the number of nodes that are evaluated by our model we use these variants:\r\n",
+    "    - We implement alpha-beta pruning\r\n",
+    "    - \r\n",
     "> *“Give me six hours to chop down a tree and I will spend the first four sharpening the axe.”* - Abraham Lincoln"
    ],
    "metadata": {
@@ -818,9 +818,8 @@
    "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
